Let ueventd do the coldplug
This commit makes udev start before Android container and let ueventd do
the coldplug. This prevent double coldboot/coldplug and make camera
works on FP2 with Halium 7.1 port.

On FP2 with Halium 7.1, mm-qcamera-daemon happens to start in the
container at approx. the same time with udevtrigger job. As part of
daemon's startup, it talks to some kernel interface to init camera
sensor's v4l-subdev's and expect them to appear shortly after that. But
with overwhelming amount of uevents generate by udevtrigger, Android's
ueventd takes some time until it can create such device nodes. This make
the daemon fails to find the device node and assume that initialisation
fails. By preventing double coldboot/coldplug, ueventd will be able to
create such device nodes in time, making the camera works.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lxc-android-config (0.233+ubports0) xenial; urgency=medium
+
+  * Starts udev before Android container and let ueventd do the coldplug.
+
+ -- Ratchanan Srirattanamet <peathot@hotmail.com>  Mon, 26 Aug 2019 14:55:13 +0700
+
 lxc-android-config (0.232+ubports0) xenial; urgency=medium
 
   * Disable QtWebEngine GPU
